--- a/src/main/resources/templates/Signup.html
+++ b/src/main/resources/templates/Signup.html
@@ -53,7 +53,7 @@
 
     <!-- Formulario de registro -->
     <form action="/api/auth/signup" method="post">
-        <input type="text" name="username" placeholder="Username" required>
+        <input type="text" name="name" placeholder="Username" required>
         <input type="text" name="email" placeholder="Email" required>
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Register</button>
